# generative-art-studio

./: .gitignore  BLOCK_SETUP_NOTES.md  BUGFIX_DATA_STRUCTURES.md  BUGFIX_PROGRESS_CALLBACK.md  CHANGELOG.md  ENHANCEMENTS_SUMMARY.md  FIXES_2025-10-25.md  FIXES_2025-10-26.md  IMPLEMENTATION_PLAN.md  INSTALL.md  MATHEMATICAL_ENHANCEMENTS.md  MULTI_METHOD_UX_DESIGN.md  NEW_FEATURES.md  PARAMETER_GUIDE.md  PATTERN_GUIDE.md  PAUSE_BUTTON_FIX.md  PAUSE_BUTTON_FIX_SUMMARY.md  PAUSE_CONTINUE_FEATURE.md  PAUSE_CONTINUE_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SQUARE_NETWORK_README.md  TKINTER_ISSUE.md  TROUBLESHOOTING.md  UI_FIXES_SUMMARY.md  UPDATES.md  UX_IMPROVEMENTS_SUMMARY.md  YOUR_SETUP.md  create_art.sh  generate_art.py  install_public_pypi.sh  install_workaround.sh  pip.conf  pyproject.toml  requirements.txt  (+8 more)
docs/: ARCHITECTURE.md  CLI_GUIDE.md  DEVELOPMENT.md  EXAMPLES.md  GUI_GUIDE.md  QUICKSTART.md
src/: app.py  main.py
src/generators/: __init__.py  base.py  mathematical.py  random_walk.py
src/gui/: __init__.py  main_window.py
tests/: test_random_walk.py
